# Copyright (c) 2025 by TGL team.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "tgl-kernel"
description = "TGL Custom CUDA Kernels for Multi-head Latent Attention"
requires-python = ">=3.10,<4.0"
authors = [{ name = "TGL team" }]
license = "Apache-2.0"
readme = "README.md"
urls = { Homepage = "https://github.com/your-org/tgl-kernel" }
dynamic = ["dependencies", "version"]

[build-system]
requires = ["setuptools>=77", "packaging>=24", "apache-tvm-ffi>=0.1.4,<0.2"]
build-backend = "build_backend"
backend-path = ["."]

[tool.setuptools]
include-package-data = false
py-modules = ["build_backend", "build_utils"]

[tool.setuptools.dynamic]
version = {attr = "tgl_kernel._build_meta.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["tgl_kernel*"]
exclude = ["tgl_kernel-jit-cache*", "tests*", "benchmarks*", "examples*"]

[tool.setuptools.package-data]
"tgl_kernel" = [
    "_build_meta.py"
]
"tgl_kernel.data" = [
    "csrc/**",
    "aot/**/*.so"
]
